--- a/Style/style.css
+++ b/Style/style.css
@@ -33,6 +33,24 @@ iframe#tela {
     position: relative;
     top: 79px;
     left: 22px;
-    width: 267px;
+    width: 266px;
     height: 472px;
+}
+section#rede-sociais {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+}
+section#rede-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.479);
+    box-sizing: border-box;
+    transition-duration: 0.2s;
+}
+section#rede-sociais img:hover {
+    border: 3px solid rgba(255, 255, 255, 0.664);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.733);
 }
